# c-connect-4

./: .gitignore  CMakeLists.txt
include/: raylib.h  raymath.h  rlgl.h  types.h
src/: main.c
src/core/: Bag.cpp  Bag.h  Board.cpp  Board.h  BoardPiece.cpp  BoardPiece.h  Entity.cpp  Entity.h  GameLogic.cpp  GameLogic.h  Global.cpp  Global.h
src/graphics/: Renderer.cpp  Renderer.h
src/main/: main.cpp
src/math/: Utils.h
